log

Wed 16 Aug 2023 12:26:54 AM UTC: 
 exercises.c | 78 ++++++++++++++++++++++++++++++++++++++++++++++++++++++-------
 1 file changed, 69 insertions(+), 9 deletions(-)
 tests:  0|5
total_score: 20/70
bbaeb25
Wed 16 Aug 2023 12:30:08 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:34:25: error: expected ‘;’ before ‘:’ token
   34 |     printf("%d ",arr[i]):
      |                         ^
      |                         ;
Compilation failed
c57a9ee
Wed 16 Aug 2023 12:30:22 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
4c31b20
Wed 16 Aug 2023 12:33:57 AM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|5
total_score: 20/70
5709582
Wed 16 Aug 2023 12:34:59 AM UTC: 
 exercises.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|5
total_score: 20/70
97c7dfe
Wed 16 Aug 2023 12:35:45 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:1:
exercises.c: In function ‘reverseArray’:
exercises.c:38:22: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
   38 |   for(int i=size-1 ; i=0 ; i--){
      |                      ^
cc1: all warnings being treated as errors
Compilation failed
4f05337
Wed 16 Aug 2023 12:35:52 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|5
total_score: 20/70
610e02e
Wed 16 Aug 2023 12:36:33 AM UTC: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  0|5
total_score: 20/70
2bd0398
Wed 16 Aug 2023 12:41:00 AM UTC: 
 exercises.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|4
total_score: 30/70
362ba1d
